# TRUtils

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE.md
cmake/: CPM.cmake  CompilerWarnings.cmake
include/trutils/: panic.hpp  simple_flatmap.hpp  slot_map.hpp  sparse_map.hpp  sparse_set.hpp  stack_alloc.hpp  strong_typedef.hpp  table.hpp  type_erased_vector.hpp  type_id.hpp  untyped_vector.hpp  utility_concepts.hpp
tests/: CMakeLists.txt  basic.cpp  simple_flatmap.cpp  slot_map.cpp  slotmap.cpp  stack_alloc_checkpoint.cpp  table.cpp  type_erased_vector.cpp  untyped_vector.cpp
